Bug 51143 - CONFIGURATION: crash if online update not installed
Summary: CONFIGURATION: crash if online update not installed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta1
Hardware: Other All
: high critical
Assignee: Stephan Bergmann
URL:
Whiteboard: BSA target:3.7.0 target:3.6.0.2
Keywords: regression
: 50986 51902 52018 52118 (view as bug list)
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-06-15 23:26 UTC by pierre-yves samyn
Modified: 2012-08-25 12:56 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot after step 5 (6.10 KB, image/png)
2012-06-15 23:26 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2012-06-15 23:26:18 UTC
Created attachment 63098 [details]
Screenshot after step 5

Hello

Problem description: 

LibO crash when access to options if you don't install online update 

Steps to reproduce:
1. Custom Install (first install or modify) 
2. Optional components> Online update> do not install
3. Finish install
4. Start LibO 
5. Tools> Options 

Expected result : dialog opens
Actual result : crash (see screenshot)

Platform : 
              
windows 7 64bits & Version 3.6.0beta1 (Build ID: 1f1cdd8) 

Reproduced (fr-discuss) with Win7 32 bits

Regards
Pierre-Yves
Comment 1 Andras Timar 2012-06-21 01:58:31 UTC
Unhandled exception at 0x75abb9bc in soffice.bin: Microsoft C++ exception: com::sun::star::uno::DeploymentException at memory location 0x00c3ed60..

Call Stack:

 	KernelBase.dll!75abb9bc() 	
 	[Frames below may be incorrect and/or missing, no symbols loaded for KernelBase.dll]	
 	KernelBase.dll!75abb9bc() 	
 	msvcr90.dll!_CallCatchBlock2(EHRegistrationNode * pRN=0x00c3ed9c, const _s_FuncInfo * pFuncInfo=0x68244c4c, void * handlerAddress=0x681e323a, int CatchDepth=0, unsigned long NLGCode=256)  Line 512 + 0xc bytes	C++
 	msvcr90.dll!CallCatchBlock(EHExceptionRecord * pExcept=0x00c3e908, EHRegistrationNode * pRN=0x00c3ed9c, _CONTEXT * pContext=0x00000001, const _s_FuncInfo * pFuncInfo=0x68244c4c, void * handlerAddress=0x00000000, int CatchDepth=0, unsigned long NLGCode=256)  Line 1465 + 0x10 bytes	C++
 	msvcr90.dll!CatchIt(EHExceptionRecord * pExcept=0x00c3e908, EHRegistrationNode * pRN=0x00000000, _CONTEXT * pContext=0x00c3e958, void * pDC=0x00c3e8dc, const _s_FuncInfo * pFuncInfo=0x68244c4c, const _s_HandlerType * pCatch=0x00000000, const _s_CatchableType * pConv=0x68251b74, const _s_TryBlockMapEntry * pEntry=0x00000000, int CatchDepth=0, EHRegistrationNode * pMarkerRN=0x00000000, unsigned char IsRethrow='¬')  Line 1275 + 0x1e bytes	C++
 	msvcr90.dll!FindHandler(EHExceptionRecord * pExcept=0x00c3e908, EHRegistrationNode * pRN=0x00c3ed9c, _CONTEXT * pContext=0x00c3e958, void * pDC=0x00c3e8dc, const _s_FuncInfo * pFuncInfo=0x68244c4c, unsigned char recursive=0, int CatchDepth=0, EHRegistrationNode * pMarkerRN=0x00000000)  Line 774 + 0x22 bytes	C++
 	msvcr90.dll!__InternalCxxFrameHandler(EHExceptionRecord * pExcept=0x00c3e908, EHRegistrationNode * pRN=0x00c3ed9c, _CONTEXT * pContext=0x00c3e958, void * pDC=0x00c3e8dc, const _s_FuncInfo * pFuncInfo=0x68244c4c, int CatchDepth=0, EHRegistrationNode * pMarkerRN=0x00000000, unsigned char recursive=0)  Line 524 + 0x19 bytes	C++
 	msvcr90.dll!__CxxFrameHandler3(EHExceptionRecord * pExcept=0x00c3ed9c, EHRegistrationNode * pRN=0x00c3e958, void * pContext=0x00c3e8dc, void * pDC=0x00c3ed9c)  Line 311 + 0x19 bytes	C++
 	ntdll.dll!7765b459() 	
 	ntdll.dll!7765b42b() 	
 	ntdll.dll!7765b3ce() 	
 	ntdll.dll!77610133() 	
 	KernelBase.dll!75abb9bc() 	
>	cppuhelper3MSC.dll!com::sun::star::uno::Exception::Exception(const rtl::OUString & Message_={...}, const com::sun::star::uno::Reference<com::sun::star::uno::XInterface> & Context_={...})  Line 32 + 0x8 bytes	C++
 	KernelBase.dll!75abb9bc() 	
 	KernelBase.dll!75abb9bc() 	
 	cppuhelper3MSC.dll!com::sun::star::uno::Exception::Exception(const rtl::OUString & Message_={...}, const com::sun::star::uno::Reference<com::sun::star::uno::XInterface> & Context_={...})  Line 32 + 0x8 bytes	C++
 	msvcr90.dll!_CxxThrowException(void * pExceptionObject=0x00c3ece8, const _s__ThrowInfo * pThrowInfo=0x68251b0c)  Line 161	C++
 	cppuhelper3MSC.dll!cppu::loadSharedLibComponentFactory(const rtl::OUString & rLibName={...}, const rtl::OUString & rPath={...}, const rtl::OUString & rImplName={...}, const com::sun::star::uno::Reference<com::sun::star::lang::XMultiServiceFactory> & xMgr={...}, const com::sun::star::uno::Reference<com::sun::star::registry::XRegistryKey> & xKey={...}, const rtl::OUString & rPrefix={...})  Line 513	C++
 	cppuhelper3MSC.dll!`anonymous namespace'::ServiceManager::loadImplementation(const boost::shared_ptr<`anonymous namespace'::ImplementationInfo> & info={...}, com::sun::star::uno::Reference<com::sun::star::lang::XSingleComponentFactory> * factory1=0x00c3ed00, com::sun::star::uno::Reference<com::sun::star::lang::XSingleServiceFactory> * factory2=0x0b0add50)  Line 878 + 0x48 bytes	C++
 	cppuhelper3MSC.dll!`anonymous namespace'::ServiceManager::findServiceImplementation(const rtl::OUString & specifier={...})  Line 1867	C++
 	cppuhelper3MSC.dll!`anonymous namespace'::ServiceManager::createInstanceWithContext(const rtl::OUString & aServiceSpecifier={...}, const com::sun::star::uno::Reference<com::sun::star::uno::XComponentContext> & Context={...})  Line 997 + 0x19 bytes	C++
 	cppuhelper3MSC.dll!`anonymous namespace'::ServiceManager::createInstance(const rtl::OUString & aServiceSpecifier={...})  Line 952 + 0x1a bytes	C++
 	cuilo.dll!OfaTreeOptionsDialog::Initialize(const com::sun::star::uno::Reference<com::sun::star::frame::XFrame> & _xFrame={...})  Line 1621 + 0x11 bytes	C++
 	cuilo.dll!OfaTreeOptionsDialog::OfaTreeOptionsDialog(Window * pParent=0x00000000, const com::sun::star::uno::Reference<com::sun::star::frame::XFrame> & _xFrame={...}, bool bActivateLastSelection=true)  Line 529	C++
 	cuilo.dll!AbstractDialogFactory_Impl::CreateFrameDialog(Window * pParent=0x00000000, const com::sun::star::uno::Reference<com::sun::star::frame::XFrame> & rxFrame={...}, unsigned long nResId=31630, const String & rParameter={...})  Line 1048 + 0x27 bytes	C++
 	sfxlo.dll!SfxApplication::OfaExec_Impl(SfxRequest & rReq={...})  Line 960 + 0x18 bytes	C++
 	sfxlo.dll!SfxStubSfxApplicationOfaExec_Impl(SfxShell * pShell=0x052223d0, SfxRequest & rReq={...})  Line 1143 + 0xe bytes	C++
 	sfxlo.dll!SfxDispatcher::Call_Impl(SfxShell & rShell={...}, const SfxSlot & rSlot={...}, SfxRequest & rReq={...}, unsigned char bRecord='')  Line 263	C++
 	sfxlo.dll!SfxDispatcher::_Execute(SfxShell & rShell={...}, const SfxSlot & rSlot={...}, SfxRequest & rReq={...}, unsigned short eCallMode=4)  Line 943 + 0x19 bytes	C++
 	sfxlo.dll!SfxBindings::Execute_Impl(SfxRequest & aReq={...}, const SfxSlot * pSlot=0x6754faf8, SfxShell * pShell=0x052223d0)  Line 1288	C++
 	sfxlo.dll!SfxDispatchController_Impl::dispatch(const com::sun::star::util::URL & aURL={...}, const com::sun::star::uno::Sequence<com::sun::star::beans::PropertyValue> & aArgs={...}, const com::sun::star::uno::Reference<com::sun::star::frame::XDispatchResultListener> & rListener={...})  Line 749	C++
 	sfxlo.dll!SfxOfficeDispatch::dispatch(const com::sun::star::util::URL & aURL={...}, const com::sun::star::uno::Sequence<com::sun::star::beans::PropertyValue> & aArgs={...})  Line 377 + 0x1a bytes	C++
 	fwklo.dll!framework::MenuBarManager::Select(Menu * pMenu=0x0ff4d458)  Line 1116	C++
 	fwklo.dll!framework::MenuBarManager::LinkStubSelect(void * pThis=0x06c08008, void * pCaller=0x0ff4d458)  Line 1047 + 0xe bytes	C++
 	tllo.dll!Link::Call(void * pCaller=0x0ff4d458)  Line 143 + 0xe bytes	C++
 	vcllo.dll!Menu::Select()  Line 1135 + 0x10 bytes	C++
 	vcllo.dll!Menu::ImplCallSelect(void * __formal=0x00c3f7e0)  Line 3002	C++
 	vcllo.dll!Menu::LinkStubImplCallSelect(void * pThis=0x0ff4d458, void * pCaller=0x00000000)  Line 2998 + 0xe bytes	C++
 	tllo.dll!Link::Call(void * pCaller=0x00000000)  Line 143 + 0xe bytes	C++
 	vcllo.dll!ImplHandleUserEvent(ImplSVEvent * pSVEvent=0x00000000)  Line 2004	C++
 	vcllo.dll!ImplWindowFrameProc(Window * pWindow=0x0525c9f8, SalFrame * __formal=0x0525cc98, unsigned short nEvent=22, const void * pEvent=0x0fd073e8)  Line 2576	C++
 	vcllo.dll!SalFrame::CallCallback(unsigned short nEvent=22, const void * pEvent=0x0fd073e8)  Line 281 + 0x16 bytes	C++
 	vcllo.dll!ImplHandleUserEvent(HWND__ * hWnd=0x000406a6, long lParam=265319400)  Line 4279	C++
 	vcllo.dll!SalFrameWndProc(HWND__ * hWnd=0x000406a6, unsigned int nMsg=1154, unsigned int wParam=0, long lParam=265319400, int & rDef=1)  Line 5902	C++
 	vcllo.dll!SalFrameWndProcW(HWND__ * hWnd=0x000406a6, unsigned int nMsg=1154, unsigned int wParam=0, long lParam=265319400)  Line 6048 + 0x15 bytes	C++
 	user32.dll!758262fa() 	
 	user32.dll!75826d3a() 	
 	user32.dll!75826ce9() 	
 	user32.dll!758277c4() 	
 	user32.dll!7582788a() 	
 	vcllo.dll!ImplDispatchMessage(const tagMSG * lpMsg=0x00c3fa40)  Line 125	C++
 	vcllo.dll!ImplSalDispatchMessage(tagMSG * pMsg=0x00c3fa40)  Line 638	C++
 	vcllo.dll!ImplSalYield(unsigned char bWait='', unsigned char bHandleAllCurrentEvents=0)  Line 657 + 0x9 bytes	C++
 	vcllo.dll!WinSalInstance::Yield(bool bWait=true, bool bHandleAllCurrentEvents=false)  Line 719 + 0xb bytes	C++
 	vcllo.dll!ImplYield(bool i_bWait=true, bool i_bAllEvents=false)  Line 452	C++
 	vcllo.dll!Application::Yield(bool i_bAllEvents=false)  Line 485 + 0xa bytes	C++
 	vcllo.dll!Application::Execute()  Line 430 + 0x7 bytes	C++
 	sofficeapp.dll!desktop::Desktop::Main()  Line 1806	C++
 	vcllo.dll!ImplSVMain()  Line 183 + 0x11 bytes	C++
 	vcllo.dll!SVMain()  Line 221	C++
 	sofficeapp.dll!soffice_main()  Line 77 + 0x5 bytes	C++
 	soffice.bin!main(int argc=2, char * * argv=0x029a9070)  Line 33 + 0x17 bytes	C
 	soffice.bin!WinMain(void * _hinst=0x00000000, void * _dummy=0x00cd3555, char * _cmdline=0x00000001, int _nshow=-1505778256)  Line 33 + 0x15 bytes	C
 	soffice.bin!__tmainCRTStartup()  Line 578 + 0x1d bytes	C
 	kernel32.dll!7571339a() 	
 	ntdll.dll!77639ef2() 	
 	ntdll.dll!77639ec5()
Comment 2 vitriol 2012-06-21 02:08:18 UTC
Is this related to Bug 50986?
Comment 3 Stefan Knorr 2012-06-22 11:01:27 UTC
*** Bug 50986 has been marked as a duplicate of this bug. ***
Comment 4 pierre-yves samyn 2012-06-29 04:34:00 UTC
Hello

Still occurs with Version 3.6.0.0.beta2 (Build ID: f010139)
Windows 7 64bits

Regards...

Pierre-Yves
Comment 5 pierre-yves samyn 2012-07-06 00:42:34 UTC
Still occurs with Version 3.6.0.0.beta3 (Build ID: 3e2b862) Windows 7 64bits
Comment 6 Urmas 2012-07-10 11:27:47 UTC
*** Bug 51902 has been marked as a duplicate of this bug. ***
Comment 7 Leandro 2012-07-11 00:05:08 UTC
This bug occurs in pt-br version of Lodev 3.6.0.0.beta3 id: 3e2b862
Tks.
Comment 8 vitriol 2012-07-12 16:45:07 UTC
*** Bug 52018 has been marked as a duplicate of this bug. ***
Comment 9 Stephan Bergmann 2012-07-13 10:02:04 UTC
(Can be reproduced on Linux too when manually removing program/libupdchk.so from the LO installation.)
Comment 10 Not Assigned 2012-07-13 10:17:10 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e7702fb704133bad6a534a166e96599347cf6b4

fdo#51143 Do not wrap CannotActivateFactoryException as DeploymentException
Comment 11 Not Assigned 2012-07-13 10:23:27 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2714a433d6c52ebc5030c4b956ff0f06e1533e84&g=libreoffice-3-6

fdo#51143 Do not wrap CannotActivateFactoryException as DeploymentException


It will be available in LibreOffice 3.6.
Comment 12 vitriol 2012-07-15 13:29:43 UTC
*** Bug 52118 has been marked as a duplicate of this bug. ***
Comment 13 pierre-yves samyn 2012-08-25 12:56:42 UTC
Hello

WORKSFORME with Version 3.6.1.2 (Build ID: e29a214) & Windows 64bits (& XP)

Regards
Pierre-Yves