fdo#51143 Do not wrap CannotActivateFactoryException as DeploymentException

...as some client code catches just the former and thus fails now.  (This was a
regression introduced with the recent cppuhelper/source/defaultbootstrap.cxx.)

Change-Id: I8306797f8331d894ab4e7695478e3824e9f79197
(cherry picked from commit 2e7702fb704133bad6a534a166e96599347cf6b4)

Signed-off-by: Caolán McNamara <caolanm@redhat.com>